- [feature] Added new user input flag to choose whether to scale composition based on presence of coating element or not. False by default. - [refactor] Started refactor process for applying coating logic after variation logic instead of before to reduce code complexity.